<resources>


    <string name="app_name">DreamFulbari</string>
    <string name="access_token">pk.eyJ1IjoiaGltZWwiLCJhIjoiY2p2N25tY2txMDduMjRlcXlyNWg2NmxsZSJ9.5geXiOQrHSP7YsS0TqT5lA</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="empty_result">No data!</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="map_fragmentt">mapFragment</string>


    <!-- TODO - add your ad unit Ids -->
    <!-- AdMob ad unit IDs -->
    <string name="admob_app_id">ca-app-pub-3606940606832399~2525526848</string>
    <string name="banner_home_footer">ca-app-pub-3606940606832399/3208053126</string>
    <string name="interstitial_full_screen">ca-app-pub-3606940606832399/4707114857</string>
    <string name="rewarded_video">ca-app-pub-3606940606832399/7314108656</string>


    <!--- Addmob   !-->
    <string name="app_ad_id">ca-app-pub-3606940606832399~2525526848</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/8691691433</string>
    <string name="rewarded_ad_unit_id">ca-app-pub-3606940606832399/7314108656</string>
    <string name="banner">BANNER</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_denied">Permission denied, map will not work!</string>

    <string name="not_found">not found over your area</string>
    <string name="share_text">Install This Application from:</string>
    <string name="no_internet">No internet!</string>
    <string name="connect">Connect</string>
    <string name="dialoge_text">Are you sure,want exit from App?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="notifications">Notifications</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter Your Email</string>
    <string name="prompt_password">Enter Your Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Enter Your Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="institute">Enter Your Institute Name</string>
    <string name="currentlocation">Enter Your Current Location Like Mirpur 01 Or Rangpurcity Etc.</string>
    <string name="messenger">Messenger</string>
    <string name="studen_info">Student Information</string>
    <string name="help_line">Help Line</string>
    <string name="blood_group">Blood Group</string>
    <string name="employer_information">Employer Information</string>
    <string name="organizations">Organizations</string>
    <string name="organizationsName">Enter Your Organizations Name.</string>
    <string name="google_map_Api_key">AIzaSyC20APzDzFoXDeFIgjiGyv7g0vuA-ubcNI</string>
    <string name="text_title">Employee Name</string>
    <string name="splashTitle">Degital Fulbari</string>
    <string name="sms_send">SMS SEND</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="start_navigating">Start Navigating</string>
    <string name="news">News</string>

</resources>
