<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.HomePageActivity"
    tools:showIn="@layout/app_bar_home_page"
    android:orientation="vertical">


    <LinearLayout
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginTop="@dimen/layout_margin_10dp"
            android:layout_weight="1"
            android:background="@drawable/input_outline"
            android:id="@+id/messenger_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_messenger_black_24dp"
                />
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messenger"
                android:textSize="25sp"
                android:textColor="#4576E4"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/layout_margin_5dp"
            android:background="@drawable/input_outline"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/layout_margin_10dp"
            android:id="@+id/news_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_blog_24dp"
                />
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textSize="25sp"
                android:textColor="#4576E4"/>


        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:background="@drawable/input_outline"
            android:id="@+id/employer_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_people_black_24dp"
                />
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employer_information"
                android:textSize="25sp"
                android:textColor="#4576E4"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/layout_margin_5dp"

            android:layout_weight="1"
            android:background="@drawable/input_outline"
            android:id="@+id/student_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_people_black_24dp"
                />
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studen_info"
                android:textSize="25sp"
                android:textColor="#4576E4"/>


        </LinearLayout>




    </LinearLayout>


    <LinearLayout
    android:layout_margin="10dp"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_weight="1"
        android:background="@drawable/input_outline"
        android:id="@+id/bloodgroup_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_blood_24"
            />
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_group"
            android:textSize="25sp"
            android:textColor="#4576E4"/>


    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/layout_margin_5dp"
        android:layout_weight="1"
        android:background="@drawable/input_outline"
        android:id="@+id/helpline_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_live_help_black_24dp"
            />
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_line"
            android:textSize="25sp"
            android:textColor="#4576E4"/>


    </LinearLayout>




</LinearLayout>

</LinearLayout>